[fix] link spacing in labels RM#16796

--- a/odoo/local-src/theme_fluxdocs/static/less/form.less
+++ b/odoo/local-src/theme_fluxdocs/static/less/form.less
@@ -15,6 +15,10 @@
             .form-group {
                 label {
                     text-align: left;
+                    a{
+                        padding-left: 0.2em;
+                        padding-right: 0.2em;
+                    }
                 }
                 &.has-error{
                     label {
